# Workspace-Template

cpp-workspace/: meta.json
cpp-workspace/qt/: CMakeLists.txt
cpp-workspace/qt/source/: CMakeLists.txt  MainWindow.cpp
cpp-workspace/qt5/: CMakeLists.txt  CMakePresets.json
cpp-workspace/qt5/include/: MainWindow.h
cpp-workspace/qt5/source/: CMakeLists.txt  MainWindow.cpp  main.cpp
scripts/: script.py
scripts/data_types/: workspace_template.py
